--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="styles.css" rel="stylesheet" />
     <!-- <link rel="canonical" href="https://gjchoo.com" /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Open+Sans:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>This is the test page</h1>
+    <h1>GJ</h1>
+    <h2>Testing 1 2 3</h2>
   </body>
 </html>
