fix: update h6 tag

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <h1>GJ</h1>
+  <body class="background-red">
     <h2>Testing 1 2 3</h2>
     <h3>This is a H3 file</h3>
     <h4>If it works, you can see this </h4>
+    <h5>I would like to know this really works!</h5>
+    <h6>Navigation menu</h6>
   </body>
 </html>
